Add JDK 28 to the testing JDK list